skfe/k8s/envoy.json
{
    "static_resources": {
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 8000
                    }
                },
                "filter_chains": {
                    "filters": [
                        {
                            "name": "envoy.http_connection_manager",
                            "config": {
                                "stat_prefix": "ingress_http",
                                "http_filters": [
                                    {
                                        "name": "envoy.router",
                                        "config": {}
                                    }
                                ],
                                "route_config": {
                                    "virtual_hosts": [
                                        {
                                            "name": "jsdoc",
                                            "domains": "jsdoc.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "jsdoc"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "skia.org",
                                            "domains": "skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "docserver"
                                                    }
                                                }
                                            ]
                                        }

                                    ]
                                }
                            }
                        }
                    ]
                }
            }
        ],
        "clusters": [
            {
                "name": "jsdoc",
                "type": "STRICT_DNS",
                "connect_timeout": "1s",
                "hosts": [
                    {
                        "socket_address": {
                            "address": "jsdoc",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "docserver",
                "type": "STRICT_DNS",
                "connect_timeout": "1s",
                "hosts": [
                    {
                        "socket_address": {
                            "address": "docserver",
                            "port_value": 8000
                        }
                    }
                ]
            }
        ]
    }
}
